--- a/docs/annual_reports/year2/Q1.md
+++ b/docs/annual_reports/year2/Q1.md
@@ -1,201 +1,541 @@
 # 애니메이션 파일 정리 애플리케이션 - 2년차 1분기 개발 계획
 
 ## 개발 목표
-2년차 1분기는 핵심 기능 구현 단계를 이어가며, 메타데이터 수집 및 파일 정리 기능 고도화에 집중합니다. **특히 1년차에 확립한 데이터베이스 중심 아키텍처를 활용하여 메타데이터와 파일 정리 관련 모든 정보를 데이터베이스에 효율적으로 저장, 관리, 활용하는 방안을 구현합니다.**
+2년차 1분기는 애니메이션 파일 정리 애플리케이션의 핵심 기능 확장에 중점을 둡니다. 특히 파일 감지 및 자동 분류 시스템을 강화하고, 메타데이터 수집 기능을 고도화하여 **데이터베이스 중심 아키텍처의 완성도를 높입니다**. 또한 고급 검색 기능과 필터링 시스템을 구현하여 대규모 애니메이션 라이브러리를 효율적으로 관리할 수 있도록 합니다.
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
-### 메타데이터 수집 시스템 고도화
-- [ ] 메타데이터 수집 프로세스 최적화 및 병렬 처리
-  - 동시 요청 매니저 구현
-  - 소스별 우선순위 기반 스케줄링
-  - 작업 취소 및 재개 메커니즘
-  - 멀티스레딩 성능 튜닝
-  - **수집된 메타데이터의 데이터베이스 저장 성능 최적화**
-- [ ] 지연 로딩 및 필요시 로딩 전략 구현
-  - 메타데이터 필드별 로딩 전략
-  - 뷰 기반 선택적 로딩
-  - 캐시 계층화 및 메모리 최적화
-  - 백그라운드 프리로딩 알고리즘
-  - **데이터베이스에서 메타데이터 지연 로딩 및 캐싱 구현**
-- [ ] 식별 정확도 향상을 위한 휴리스틱 알고리즘 개선
-  - 파일명 파싱 패턴 확장
-  - 퍼지 매칭 알고리즘 구현
-  - 신뢰도 점수 산출 개선
-  - 머신러닝 기반 식별 조사(PoC)
-  - **식별 결과 및 신뢰도 점수 데이터베이스 저장**
-- [ ] 메타데이터 충돌 해결 정책 상세 구현
-  - 필드별 병합 규칙 정의
-  - 소스 우선순위 관리 시스템
-  - 충돌 시각화 및 사용자 해결 UI
-  - 자동/수동 해결 모드 전환
-  - **충돌 해결 규칙 및 이력 데이터베이스 관리**
-- [ ] 메타데이터 갱신 자동화 및 수동 트리거 기능
-  - 시간 기반 갱신 스케줄러
-  - 이벤트 기반 갱신 트리거
-  - 배치 갱신 작업 관리자
-  - 갱신 상태 모니터링 시스템
-  - **갱신 상태 및 이력 데이터베이스 기록**
+### 파일 감지 및 자동 분류 시스템 강화
+- [ ] 실시간 파일 시스템 감시 기능 개선
+  - 폴더 변경 이벤트 감지 정확도 향상
+  - 대용량 디렉토리 감시 성능 최적화
+  - 다중 폴더 동시 감시 기능
+  - 네트워크 드라이브 지원 개선
+  - **감시 상태 및 이력 데이터베이스 저장**
+- [ ] 파일명 파싱 알고리즘 고도화
+  - 정규식 기반 파싱 규칙 확장
+  - 다양한 네이밍 패턴 지원
+  - 사용자 정의 규칙 설정 기능
+  - 파싱 정확도 검증 시스템
+  - **파싱 규칙 및 결과 데이터베이스 저장**
+- [ ] 자동 분류 로직 개선
+  - 메타데이터 기반 분류 알고리즘 강화
+  - 시리즈/시즌/에피소드 자동 감지
+  - 파일 유형 및 품질 분류
+  - 중복 파일 감지 및 관리
+  - **분류 결과 및 히스토리 데이터베이스 저장**
+- [ ] 일괄 처리 시스템 구현
+  - 대용량 파일 일괄 처리 큐 관리
+  - 처리 우선순위 설정
+  - 비동기 작업 관리 및 모니터링
+  - 처리 결과 보고 기능
+  - **작업 큐 및 결과 데이터베이스 저장**
+- [ ] 자동 정리 규칙 에디터 개발
+  - 사용자 정의 정리 규칙 인터페이스
+  - 규칙 테스트 및 검증 도구
+  - 조건부 규칙 및 예외 설정
+  - 규칙 가져오기/내보내기
+  - **사용자 규칙 데이터베이스 저장 및 공유**
 
-### MyAnimeList/Jikan API 플러그인 개발
-- [ ] Jikan API 기본 연동 클래스 구현
-  - RESTful 클라이언트 구현
-  - 응답 파싱 및 캐싱
-  - 오류 처리 및 재시도 로직
-  - API 버전 관리 메커니즘
-  - **API 응답 캐싱을 위한 데이터베이스 스키마 설계 및 구현**
-- [ ] 애니메이션 검색 및 상세 정보 추출 로직 개발
-  - 효율적인 검색 쿼리 구성
-  - 결과 필터링 및 정렬
-  - 페이지네이션 처리
-  - 세부 정보 요청 최적화
-  - **검색 결과 데이터베이스 저장 및 관리**
-- [ ] 평점, 인기도, 장르 등 정보 파싱 및 저장
-  - 필드 매핑 및 정규화
-  - 로컬 데이터 모델 연동
-  - 업데이트 충돌 감지 및 해결
-  - 계산 통계 캐싱
-  - **파싱된 메타데이터의 데이터베이스 모델링 및 저장**
-- [ ] 결과 캐싱 및 요청 제한 준수 메커니즘
-  - API 요청 제한 추적기
-  - 지능형 요청 스케줄링
+### 메타데이터 수집 기능 고도화
+- [ ] 다중 메타데이터 소스 통합 시스템
+  - TMDB, AniDB, MyAnimeList 등 통합 구현
+  - 소스 간 메타데이터 충돌 해결 알고리즘
+  - 메타데이터 신뢰도 평가 시스템
+  - 소스별 우선순위 설정
+  - **통합 메타데이터 데이터베이스 설계 및 구현**
+- [ ] 메타데이터 캐싱 및 동기화 개선
+  - 지능형 캐싱 전략 구현
+  - 차등 업데이트 메커니즘
+  - 백그라운드 동기화 스케줄러
   - 캐시 무효화 정책
-  - 대체 데이터 전략
-  - **데이터베이스 기반 캐싱 및 요청 제한 관리**
-- [ ] AniDB ID와 MAL ID 매핑 로직 개발
-  - 매핑 테이블 구축 및 유지
-  - 이름 기반 매칭 알고리즘
-  - 사용자 정의 매핑 지원
-  - 자동 매핑 검증 메커니즘
-  - **ID 매핑 정보 데이터베이스 저장 및 관리**
+  - **캐시 상태 및 동기화 이력 데이터베이스 저장**
+- [ ] 이미지 및 포스터 관리 시스템
+  - 고품질 포스터 및 아트워크 수집
+  - 썸네일 자동 생성 및 관리
+  - 이미지 캐싱 및 최적화
+  - 외부 소스 이미지 매핑
+  - **이미지 메타데이터 및 캐시 데이터베이스 관리**
+- [ ] 사용자 정의 메타데이터 지원
+  - 커스텀 필드 정의 및 관리
+  - 메타데이터 수동 편집 인터페이스
+  - 외부 소스 오버라이드 기능
+  - 메타데이터 내보내기/가져오기
+  - **사용자 정의 필드 데이터베이스 스키마 확장**
+- [ ] 성인 콘텐츠 필터링 및 관리
+  - 성인 콘텐츠 자동 감지
+  - 콘텐츠 등급 분류 및 필터링
+  - 사용자 정의 설정 및 제한
+  - 패스워드 보호 기능
+  - **필터링 설정 및 접근 이력 데이터베이스 관리**
 
-### 파일 정리 기능 고도화
-- [ ] 사용자 정의 파일명/폴더 패턴 지원 구현
-  - 패턴 문법 정의 및 파서
-  - 변수 기반 템플릿 시스템
-  - 조건부 형식 지원
-  - 패턴 검증 및 미리보기
-  - **파일명/폴더 패턴 데이터베이스 저장 및 관리**
-- [ ] 정리 작업 검증 및 예상 결과 미리보기 기능
-  - 변경 시뮬레이션 엔진
-  - 위험 작업 분석 및 경고
-  - 충돌 및 중복 감지
-  - 시각적 비교 도구
-  - **시뮬레이션 결과 데이터베이스 임시 저장 및 관리**
-- [ ] 병렬 처리 기반 대량 파일 정리 최적화
-  - 작업 분할 알고리즘
-  - I/O 병목 최소화 전략
-  - 진행 상황 추적
-  - 리소스 사용량 제한
-  - **병렬 작업 중 파일 상태 데이터베이스 업데이트**
-- [ ] 특수 케이스 처리 (OVA, 영화, 스페셜 등)
-  - 컨텐츠 유형별 규칙 정의
-  - 메타데이터 기반 분류 로직
-  - 사용자 정의 분류 규칙
-  - 예외 케이스 처리 방법
-  - **특수 케이스 처리 규칙 데이터베이스 저장**
-- [ ] 정리 작업 로그 및 롤백 메커니즘 강화
-  - 트랜잭션 기반 파일 작업
-  - 상세 작업 로그 데이터베이스
-  - 선택적 롤백 기능
-  - 작업 재시도 메커니즘
-  - **작업 이력 및 롤백 정보 데이터베이스 저장 및 관리 시스템 구현**
+### 고급 검색 및 필터링 시스템
+- [ ] 전체 텍스트 검색 엔진 구현
+  - 인덱싱 및 검색 알고리즘 구현
+  - 다양한 메타데이터 필드 검색 지원
+  - 형태소 분석 및 자동 완성
+  - 검색 결과 관련성 정렬
+  - **검색 인덱스 및 히스토리 데이터베이스 관리**
+- [ ] 다중 조건 필터링 인터페이스
+  - 복합 필터 생성 UI
+  - 필터 조합 및 저장 기능
+  - 동적 필터 미리보기
+  - 고급 사용자용 쿼리 빌더
+  - **필터 설정 저장 및 공유 데이터베이스 관리**
+- [ ] 스마트 컬렉션 시스템
+  - 동적 컬렉션 규칙 정의
+  - 자동 업데이트 컬렉션
+  - 컬렉션 관리 인터페이스
+  - 공유 및 가져오기 기능
+  - **컬렉션 정의 및 상태 데이터베이스 저장**
+- [ ] 태그 및 키워드 관리 시스템
+  - 자동 태그 생성 및 제안
+  - 사용자 정의 태그 및 관리
+  - 태그 기반 검색 및 필터링
+  - 태그 클라우드 및 관계 시각화
+  - **태그 시스템 데이터베이스 스키마 및 구현**
+- [ ] 시청 상태 추적 및 필터링
+  - 시청/미시청/진행 중 상태 관리
+  - 에피소드별 시청 상태 추적
+  - 시청 진행률 시각화
+  - 상태 기반 필터링 및 정렬
+  - **시청 상태 데이터 데이터베이스 저장 및 동기화**
 
-### GUI 기능 확장
-- [ ] 메타데이터 통합 뷰 개발 (여러 소스 정보 동시 표시)
-  - 소스별 탭 또는 패널 구현
-  - 소스 간 비교 뷰
-  - 필드별 통합 표시 옵션
-  - 차이점 하이라이팅
-  - **데이터베이스에 저장된 통합 메타데이터 표시 UI 구현**
-- [ ] 파일 정리 시뮬레이션 결과 시각화
-  - 이전/이후 트리 비교 뷰
-  - 작업 유형별 색상 코딩
-  - 드릴다운 상세 정보
-  - 영향 요약 대시보드
-  - **데이터베이스 시뮬레이션 결과 로드 및 시각화**
-- [ ] 메타데이터 수동 편집 인터페이스
-  - 인라인 편집 지원
-  - 필드 유효성 검사
-  - 변경 이력 관리
-  - 대량 편집 도구
-  - **데이터베이스 메타데이터 직접 편집 및 저장 기능 구현**
+### UI/UX 개선 및 사용자 경험 향상
+- [ ] 검색 결과 표시 개선
+  - 다양한 보기 모드 (그리드, 리스트, 세부 정보)
+  - 동적 정렬 및 그룹화 옵션
+  - 커스텀 컬럼 및 필드 설정
+  - 인피니트 스크롤 및 페이징
+  - **보기 설정 데이터베이스 저장**
+- [ ] 세션 관리 및 상태 저장
+  - 애플리케이션 상태 저장 및 복원
+  - 탭 및 창 상태 관리
+  - 검색 및 필터 이력 관리
+  - 작업 상태 지속성 확보
+  - **세션 데이터 데이터베이스 저장 및 복원**
+- [ ] 드래그 앤 드롭 기능 강화
+  - 파일 및 폴더 드래그 앤 드롭 지원
+  - 일괄 작업을 위한 멀티 선택
+  - 메타데이터 및 태그 드래그 앤 드롭
+  - 사용자 정의 액션 매핑
+  - **드래그 앤 드롭 설정 데이터베이스 저장**
 - [ ] 키보드 단축키 및 접근성 개선
-  - 사용자 정의 단축키
-  - 접근성 표준 준수
-  - 스크린 리더 호환성
-  - 키보드 내비게이션 최적화
-  - **사용자 정의 단축키 데이터베이스 저장**
-- [ ] 드래그 앤 드롭 지원 확장
-  - 파일/폴더 드래그 앤 드롭
-  - 메타데이터 연결 작업
-  - 우선순위 재정렬
-  - 시각적 피드백 개선
-  - **드래그앤 드롭 메타데이터 연결 결과 데이터베이스 업데이트**
+  - 주요 기능 단축키 구현
+  - 단축키 커스터마이징
+  - 스크린 리더 지원 강화
+  - 고대비 모드 및 확대 기능
+  - **접근성 설정 데이터베이스 저장**
+- [ ] 알림 및 상태 피드백 시스템
+  - 작업 진행 및 완료 알림
+  - 배치 작업 상태 표시
+  - 오류 및 경고 메시지 개선
+  - 시스템 상태 모니터링 UI
+  - **알림 이력 및 설정 데이터베이스 저장**
 
-### 성능 최적화 및 안정성 강화
-- [ ] 메모리 사용량 모니터링 및 최적화
-  - 메모리 프로파일링 도구 통합
-  - 대형 객체 추적 및 관리
-  - 메모리 누수 감지
-  - 리소스 사용량 제한 메커니즘
-  - **데이터베이스 연결 풀 메모리 사용량 최적화**
-- [ ] 캐시 크기 관리 및 효율적 스토리지 사용
-  - 캐시 사이즈 자동 조절
-  - LRU/LFU 정책 구현
-  - 디스크 공간 모니터링
-  - 저사용 데이터 자동 정리
-  - **데이터베이스 캐시 테이블 관리 및 최적화**
-- [ ] 오류 처리 및 복구 메커니즘 강화
-  - 강화된 예외 처리 계층
-  - 우아한 실패 모드
-  - 자동 복구 프로세스
-  - 사용자 친화적 오류 안내
-  - **데이터베이스 트랜잭션 기반 오류 복구**
-- [ ] 로깅 시스템 개선 및 진단 도구 개발
-  - 구조화된 로깅 구현
-  - 로그 수준 동적 조정
-  - 원격 로그 수집 옵션
-  - 진단 정보 추출 도구
-  - **중요 시스템 및 데이터베이스 이벤트 로깅**
-- [ ] 대용량 라이브러리 처리 성능 테스트 및 개선
-  - 벤치마크 스위트 개발
-  - 성능 병목 분석
-  - 확장성 테스트 (10만+ 파일)
-  - 부하 테스트 자동화
-  - **데이터베이스 쿼리 성능 벤치마크 및 최적화**
+## 주차별 마일스톤
 
-## 예상 결과물
-- 고도화된 메타데이터 수집 시스템 (병렬 처리, 지연 로딩, 개선된 정확도) - **데이터베이스 통합 완료**
-- MyAnimeList/Jikan API 플러그인 (완전 구현, 캐싱, ID 매핑) - **데이터베이스 기반 캐싱 및 매핑 구현**
-- 사용자 정의 파일 정리 시스템 (템플릿 기반, 시뮬레이션, 롤백 지원) - **작업 이력 및 설정 데이터베이스 관리 구현**
-- 향상된 GUI 인터페이스 (통합 뷰, 편집 기능, 접근성 개선) - **데이터베이스 기반 UI 상태 및 메타데이터 관리**
-- 성능 및 안정성 개선 보고서 (벤치마크 결과, 최적화 권장사항) - **데이터베이스 성능 분석 결과 포함**
-- 2년차 1분기 기능 데모 및 내부 사용자 테스트 피드백
-- **데이터베이스 스키마 마이그레이션 도구 개선**
+- **주 1-2 (2024-01-08 ~ 2024-01-21)**: 파일 감지 및 감시 시스템 개선
+  - 2024-01-10: 실시간 파일 감지 엔진 구현 완료 (`src/anime_file_sorter/file_watcher/watcher.py`)
+  - 2024-01-14: 다중 폴더 동시 감시 기능 구현 (`src/anime_file_sorter/file_watcher/multi_monitor.py`)
+  - 2024-01-18: 파일 감지 이벤트 데이터베이스 연동 완료 (`src/anime_file_sorter/file_watcher/db_integration.py`)
+  - 2024-01-20: 대용량 디렉토리 처리 성능 테스트 및 최적화 (`tests/performance/file_watcher_perf.py`)
+  - 책임자: 파일 시스템 모니터링 담당
 
-## 위험 요소 및 대응 계획
-- **위험**: Jikan API 불안정성 또는 제한
-  - **대응**: 대체 경로 (공식 MAL API) 또는 로컬 캐싱 강화 구현
-  - **검증 방법**: API 가용성 모니터링, 오류 시나리오 시뮬레이션, 대체 경로 자동 전환 테스트
-- **위험**: 복잡한 파일 정리 규칙으로 인한 성능 저하
-  - **대응**: 규칙 컴파일 또는 미리 계산 전략, 점진적 처리 구현
-  - **검증 방법**: 복잡한 규칙 세트로 성능 벤치마크, CPU/메모리 프로파일링, 최적화 전후 비교
-- **위험**: 병렬 처리로 인한 동시성 문제
-  - **대응**: 스레드 안전 설계, 락 기반 리소스 관리, 데드락 방지 전략
-  - **검증 방법**: 스트레스 테스트, 경쟁 조건 탐지 도구 사용, 장기 실행 안정성 테스트
-- **위험**: **데이터베이스 부하 증가 및 쿼리 성능 문제**
-  - **대응**: **데이터베이스 인덱스 최적화, 쿼리 튜닝, 비동기 데이터베이스 액세스 구현**
-  - **검증 방법**: **대용량 데이터셋에서 데이터베이스 작업 성능 벤치마크**
-- **위험**: **메타데이터 및 설정 데이터베이스 스키마 변경 관리 복잡성**
-  - **대응**: **자동 마이그레이션 시스템 강화, 스키마 변경 이력 관리**
-  - **검증 방법**: **다양한 스키마 변경 시나리오 테스트, 데이터 무결성 검증**
+- **주 3-4 (2024-01-22 ~ 2024-02-04)**: 파일명 파싱 및 자동 분류 시스템 개발
+  - 2024-01-24: 파일명 파싱 알고리즘 개선 완료 (`src/anime_file_sorter/file_parser/parser_engine.py`)
+  - 2024-01-28: 사용자 정의 파싱 규칙 에디터 구현 (`src/anime_file_sorter/ui/rule_editor.py`)
+  - 2024-02-01: 자동 분류 로직 및 데이터베이스 연동 (`src/anime_file_sorter/classifier/classifier.py`)
+  - 2024-02-03: 파싱 정확도 검증 시스템 구현 (`src/anime_file_sorter/file_parser/validator.py`)
+  - 책임자: 파싱 알고리즘 & 분류 시스템 담당
 
-## 마일스톤
-- **주 3**: 메타데이터 수집 시스템 병렬 처리 및 지연 로딩 구현, **데이터베이스 수집 데이터 저장 구현**
-- **주 6**: MyAnimeList/Jikan API 플러그인 완성 및 통합, **API 캐싱 및 매핑 데이터베이스 연동**
-- **주 9**: 사용자 정의 파일 정리 시스템 구현, **정리 작업 이력 및 설정 데이터베이스 관리 구현**
-- **주 11**: GUI 기능 확장 및 성능 최적화 완료, **UI 상태 및 메타데이터 표시 데이터베이스 연동**
-- **주 13**: 통합 테스트, 버그 수정 및 1분기 기능 릴리스, **데이터베이스 최종 점검 및 성능 보고** 
+- **주 5-6 (2024-02-05 ~ 2024-02-18)**: 다중 메타데이터 소스 통합 시스템 구현
+  - 2024-02-07: 메타데이터 통합 엔진 구현 (`src/anime_file_sorter/metadata/aggregator.py`)
+  - 2024-02-11: 소스 간 충돌 해결 알고리즘 개발 (`src/anime_file_sorter/metadata/conflict_resolver.py`)
+  - 2024-02-15: 메타데이터 신뢰도 평가 시스템 구현 (`src/anime_file_sorter/metadata/confidence_evaluator.py`)
+  - 2024-02-17: 캐싱 및 동기화 메커니즘 최적화 (`src/anime_file_sorter/metadata/cache_manager.py`)
+  - 책임자: 메타데이터 시스템 담당
+
+- **주 7-8 (2024-02-19 ~ 2024-03-03)**: 전체 텍스트 검색 및 필터링 시스템 개발
+  - 2024-02-21: 검색 엔진 및 인덱싱 시스템 구현 (`src/anime_file_sorter/search/search_engine.py`)
+  - 2024-02-25: 다중 조건 필터링 UI 개발 (`src/anime_file_sorter/ui/filter_builder_widget.py`)
+  - 2024-02-29: 스마트 컬렉션 기본 기능 구현 (`src/anime_file_sorter/search/smart_collections.py`)
+  - 2024-03-02: 검색 및 필터 데이터베이스 연동 (`src/anime_file_sorter/data/search_storage.py`)
+  - 책임자: 검색 시스템 담당
+
+- **주 9-10 (2024-03-04 ~ 2024-03-17)**: 태그 시스템 및 시청 상태 추적 기능 구현
+  - 2024-03-06: 태그 관리 시스템 개발 (`src/anime_file_sorter/search/tag_system.py`)
+  - 2024-03-10: 시청 상태 추적 기능 구현 (`src/anime_file_sorter/watch/watch_tracker.py`)
+  - 2024-03-14: 태그 및 상태 기반 필터링 연동 (`src/anime_file_sorter/search/tag_filter_integration.py`)
+  - 2024-03-16: 관련 데이터베이스 스키마 확장 및 구현 (`src/anime_file_sorter/data/migrations/012_tag_watch_system.py`)
+  - 책임자: 태그 시스템 & 사용자 상태 담당
+
+- **주 11-12 (2024-03-18 ~ 2024-03-31)**: UI/UX 개선 및 통합 테스트
+  - 2024-03-20: 검색 결과 표시 개선 완료 (`src/anime_file_sorter/ui/search_results_view.py`)
+  - 2024-03-24: 드래그 앤 드롭 및 키보드 단축키 구현 (`src/anime_file_sorter/ui/interaction_handler.py`)
+  - 2024-03-27: 알림 및 상태 피드백 시스템 완성 (`src/anime_file_sorter/ui/notification_system.py`)
+  - 2024-03-30: 전체 시스템 통합 테스트 및 버그 수정 (`tests/integration/complete_system_test.py`)
+  - 2024-03-31: 분기 마무리 및 회고 (`docs/meetings/year2_q1_retrospective.md`)
+  - 책임자: UI/UX 담당 & 프로젝트 리드
+
+## 산출물 명세
+
+- `src/anime_file_sorter/file_watcher/`: 파일 감시 시스템
+  - `watcher.py`: 개선된 실시간 파일 감시 엔진
+  - `event_manager.py`: 파일 시스템 이벤트 관리
+  - `network_drive.py`: 네트워크 드라이브 지원 모듈
+  - `models.py`: 감시 설정 및 이벤트 데이터 모델
+
+- `src/anime_file_sorter/file_parser/`: 파일명 파싱 시스템
+  - `parser_engine.py`: 고도화된 파일명 파싱 엔진
+  - `rule_manager.py`: 파싱 규칙 관리 시스템
+  - `validator.py`: 파싱 결과 검증 시스템
+  - `models.py`: 파싱 규칙 및 결과 데이터 모델
+
+- `src/anime_file_sorter/classifier/`: 자동 분류 시스템
+  - `classifier.py`: 메타데이터 기반 분류 엔진
+  - `duplicate_detector.py`: 중복 파일 감지 모듈
+  - `batch_processor.py`: 일괄 처리 관리 시스템
+  - `models.py`: 분류 규칙 및 결과 데이터 모델
+
+- `src/anime_file_sorter/metadata/`: 메타데이터 시스템
+  - `aggregator.py`: 다중 소스 메타데이터 통합 엔진
+  - `cache_manager.py`: 메타데이터 캐싱 및 동기화 관리
+  - `image_manager.py`: 이미지 및 포스터 관리 시스템
+  - `custom_fields.py`: 사용자 정의 메타데이터 지원
+  - `models.py`: 통합 메타데이터 데이터 모델
+
+- `src/anime_file_sorter/search/`: 검색 및 필터링 시스템
+  - `search_engine.py`: 전체 텍스트 검색 엔진
+  - `filter_builder.py`: 다중 조건 필터 생성기
+  - `smart_collections.py`: 스마트 컬렉션 관리 시스템
+  - `tag_system.py`: 태그 및 키워드 관리 시스템
+  - `models.py`: 검색 및 필터 데이터 모델
+
+- `src/anime_file_sorter/ui/`: UI 컴포넌트
+  - `search_results_view.py`: 개선된 검색 결과 표시 컴포넌트
+  - `session_manager.py`: 세션 및 상태 관리 시스템
+  - `drag_drop_handler.py`: 드래그 앤 드롭 기능 핸들러
+  - `keyboard_shortcuts.py`: 키보드 단축키 관리
+  - `notification_system.py`: 알림 및 상태 피드백 시스템
+
+- `src/anime_file_sorter/data/migrations/`: 데이터베이스 마이그레이션
+  - `00X_file_watcher.py`: 파일 감시 시스템 관련 스키마
+  - `00Y_metadata_integration.py`: 통합 메타데이터 스키마
+  - `00Z_search_system.py`: 검색 및 필터 시스템 스키마
+
+- `docs/user_guide/`:
+  - `file_organization.md`: 파일 정리 시스템 사용자 가이드
+  - `metadata_management.md`: 메타데이터 관리 가이드
+  - `search_filter.md`: 검색 및 필터링 가이드
+  - `settings.md`: 설정 및 사용자 지정 가이드
+
+- `docs/developer/`:
+  - `file_watcher_architecture.md`: 파일 감시 시스템 설계 문서
+  - `metadata_integration.md`: 메타데이터 통합 아키텍처
+  - `search_system.md`: 검색 엔진 설계 및 구현 문서
+
+## 성공 기준 (KPI)
+
+- **파일 감지 및 분류 성능**:
+  - 실시간 파일 감지 정확도: ≥ 99.5%
+  - 대용량 디렉토리(10만 파일) 스캔 속도: ≤ 5분
+  - 파일명 파싱 정확도: ≥ 95%
+  - 자동 분류 정확도: ≥ 90%
+  - 대량 파일 일괄 처리 속도: ≥ 500파일/분
+
+- **메타데이터 시스템 품질**:
+  - 다중 소스 통합 정확도: ≥ 95%
+  - 메타데이터 검색 응답 시간: ≤ 200ms
+  - 캐시 적중률: ≥ 90%
+  - 이미지 로딩 속도: ≤ 100ms (캐시 적중 시)
+  - 사용자 정의 필드 설정 용이성: ≥ 4/5 (사용자 평가)
+
+- **검색 및 필터링 성능**:
+  - 전체 텍스트 검색 응답 시간: ≤ 300ms (1만 항목)
+  - 복합 필터 적용 시간: ≤ 200ms
+  - 검색 결과 관련성: ≥ 4/5 (사용자 평가)
+  - 태그 및 키워드 제안 정확도: ≥ 85%
+  - 스마트 컬렉션 업데이트 속도: ≤ 1초
+
+- **UI/UX 응답성**:
+  - 메인 UI 로딩 시간: ≤ 1초
+  - 화면 전환 응답 시간: ≤ 200ms
+  - 드래그 앤 드롭 작업 완료 시간: ≤ 500ms
+  - 키보드 단축키 응답 시간: ≤ 50ms
+  - 전반적인 사용성 평가: ≥ 4.2/5 (사용자 평가)
+
+- **시스템 안정성**:
+  - 장시간 실행 시 메모리 누수: ≤ 5%/24시간
+  - 충돌 빈도: ≤ 1회/100시간 사용
+  - 데이터 손실 이벤트: 0회
+  - 대용량 라이브러리 처리 시 안정성: ≥ 99.9%
+  - 테스트 커버리지: ≥ 85%
+
+## 테스트 계획
+
+### 단위 테스트
+- **파일 감시 시스템 테스트** (`tests/unit/file_watcher/`):
+  - 다양한 파일 시스템 이벤트 감지 테스트
+  - 네트워크 드라이브 연결/해제 상황 테스트
+  - 대용량 디렉토리 처리 테스트
+  - 이벤트 충돌 및 중복 처리 테스트
+  - 설정 변경에 따른 동작 검증
+
+- **파일명 파싱 테스트** (`tests/unit/file_parser/`):
+  - 다양한 파일명 패턴에 대한 파싱 정확도 테스트
+  - 사용자 정의 규칙 적용 검증
+  - 예외 사례 및 오류 처리 테스트
+  - 성능 및 최적화 검증
+  - 정규식 안전성 테스트
+
+- **메타데이터 시스템 테스트** (`tests/unit/metadata/`):
+  - 소스별 메타데이터 추출 테스트
+  - 충돌 해결 알고리즘 검증
+  - 캐싱 메커니즘 효율성 테스트
+  - 사용자 정의 필드 CRUD 테스트
+  - 이미지 관리 시스템 테스트
+
+- **검색 및 필터링 테스트** (`tests/unit/search/`):
+  - 검색 인덱스 생성 및 쿼리 테스트
+  - 다양한 검색 조건에 대한 결과 정확도 검증
+  - 필터 조합 및 복합 쿼리 테스트
+  - 정렬 및 그룹화 기능 테스트
+  - 스마트 컬렉션 규칙 평가 테스트
+
+### 통합 테스트
+- **파일 감지-분류 통합 테스트** (`tests/integration/file_processing/`):
+  - 파일 감지부터 분류까지 전체 파이프라인 테스트
+  - 대용량 파일셋에 대한 엔드투엔드 처리 테스트
+  - 다양한 파일 유형 및 구조 테스트
+  - 오류 상황 및 복구 메커니즘 테스트
+
+- **메타데이터-검색 통합 테스트** (`tests/integration/metadata_search/`):
+  - 메타데이터 수집 후 검색 인덱싱 테스트
+  - 메타데이터 업데이트에 따른 검색 결과 변화 테스트
+  - 사용자 정의 필드 검색 및 필터링 테스트
+  - 대규모 메타데이터 세트 처리 성능 테스트
+
+- **UI-백엔드 통합 테스트** (`tests/integration/ui_backend/`):
+  - UI 컴포넌트와 백엔드 시스템 연동 테스트
+  - 사용자 입력에 따른 데이터 흐름 검증
+  - 비동기 작업 진행 및 UI 업데이트 테스트
+  - 오류 처리 및 사용자 피드백 테스트
+
+- **데이터베이스 통합 테스트** (`tests/integration/database/`):
+  - 복합 쿼리 및 트랜잭션 테스트
+  - 데이터 마이그레이션 및 스키마 업데이트 테스트
+  - 대용량 데이터 처리 성능 테스트
+  - 동시 접근 및 경쟁 상태 테스트
+
+### 성능 테스트
+- **파일 시스템 성능 테스트** (`tests/performance/file_system/`):
+  - 대용량 디렉토리 스캔 성능 측정 (목표: 10만 파일 ≤ 5분)
+  - 실시간 모니터링 CPU/메모리 사용량 분석
+  - 네트워크 드라이브 접근 성능 측정
+  - 파일 처리 병렬화 효율성 테스트
+
+- **검색 엔진 성능 테스트** (`tests/performance/search/`):
+  - 인덱싱 성능 측정 (목표: 1만 항목 ≤ 30초)
+  - 검색 쿼리 응답 시간 (목표: ≤ 300ms)
+  - 복합 필터 적용 성능 (목표: ≤ 500ms)
+  - 메모리 사용량 및 최적화 테스트
+
+- **메타데이터 처리 성능 테스트** (`tests/performance/metadata/`):
+  - 다중 소스 통합 처리 시간 (목표: 100개 항목 ≤ 5초)
+  - 캐시 적중/미적중 응답 시간 비교
+  - 이미지 처리 및 최적화 성능
+  - API 요청 부하 테스트
+
+- **UI 응답성 테스트** (`tests/performance/ui/`):
+  - 대량 항목 렌더링 성능 (목표: 1000개 항목 ≤ 1초)
+  - 사용자 입력 응답 지연 측정 (목표: ≤ 50ms)
+  - 화면 전환 및 애니메이션 성능
+  - 메모리 누수 장기 테스트
+
+### 사용성 테스트
+- **내부 사용자 테스트**:
+  - 15명 이상의 테스트 참가자 모집
+  - 핵심 작업 흐름 완료 성공률 측정 (목표: ≥ 90%)
+  - 작업 완료 시간 측정 (목표: 주요 작업 ≤ 2분)
+  - System Usability Scale (SUS) 평가 (목표: ≥ 85/100)
+
+- **테스트 시나리오**:
+  - 새 애니메이션 라이브러리 설정 및 스캔
+  - 복잡한 검색 및 필터 생성
+  - 메타데이터 편집 및 커스터마이징
+  - 파일 정리 규칙 설정 및 적용
+  - 대규모 라이브러리 관리 작업
+
+- **접근성 테스트**:
+  - 키보드 전용 탐색 가능성 검증
+  - 스크린 리더 호환성 테스트
+  - 색상 대비 및 가시성 검증
+  - 다양한 화면 크기 및 해상도 테스트
+
+## 문서화 전략
+
+### 코드 문서화
+- **API 문서화 강화**:
+  - 모든 공개 API에 향상된 docstring 적용
+  - 사용 예제 및 샘플 코드 확대
+  - 내부 구현 세부사항 및 알고리즘 설명
+  - 제한사항 및 성능 고려사항 명시
+
+- **아키텍처 문서 업데이트**:
+  - 파일 감시 시스템 아키텍처 문서 (`docs/architecture/file_watcher.md`)
+  - 메타데이터 통합 아키텍처 문서 (`docs/architecture/metadata_integration.md`)
+  - 검색 엔진 설계 문서 (`docs/architecture/search_system.md`)
+  - 컴포넌트 다이어그램 업데이트 (`docs/architecture/component_diagram_v2.1.puml`)
+
+- **개발자 가이드 강화**:
+  - 파일 감시 시스템 확장 가이드 (`docs/developer/extending_file_watcher.md`)
+  - 검색 엔진 커스터마이징 가이드 (`docs/developer/customizing_search.md`)
+  - 메타데이터 소스 추가 방법 (`docs/developer/adding_metadata_source.md`)
+  - 성능 최적화 지침 (`docs/developer/performance_guidelines.md`)
+
+### 사용자 문서
+- **새로운 기능 사용자 가이드**:
+  - 파일 감시 설정 가이드 (`docs/user/file_watcher_setup.md`)
+  - 고급 검색 및 필터링 가이드 (`docs/user/advanced_search.md`)
+  - 태그 시스템 활용 가이드 (`docs/user/tag_system.md`)
+  - 시청 상태 관리 가이드 (`docs/user/watch_status.md`)
+
+- **튜토리얼 시리즈 확장**:
+  - 완전 자동화된 라이브러리 설정 (`docs/user/tutorials/automated_library.md`)
+  - 개인화된 메타데이터 관리 (`docs/user/tutorials/personalized_metadata.md`)
+  - 스마트 컬렉션으로 콘텐츠 구성 (`docs/user/tutorials/smart_collections.md`)
+  - 파일 정리 규칙 최적화 (`docs/user/tutorials/organizing_rules.md`)
+
+- **참조 문서 업데이트**:
+  - 파일명 패턴 참조 (`docs/user/references/filename_patterns.md`)
+  - 검색 쿼리 구문 가이드 (`docs/user/references/search_syntax.md`)
+  - 메타데이터 필드 완전 참조 (`docs/user/references/metadata_fields.md`)
+  - 키보드 단축키 참조 업데이트 (`docs/user/references/keyboard_shortcuts.md`)
+
+### 문서 품질 관리
+- **자동화된 문서 생성 파이프라인**:
+  - API 문서 자동 생성 설정 (Sphinx)
+  - 문서 배포 자동화 (GitHub Pages)
+  - 스크린샷 및 다이어그램 자동 업데이트 프로세스
+  - 문서 링크 및 참조 유효성 검사
+
+- **문서 리뷰 프로세스**:
+  - 기술 문서 상호 검토 워크플로
+  - 사용자 문서 가독성 및 명확성 평가
+  - 번역 및 지역화 준비
+  - 분기별 문서 전체 검토
+
+## 릴리즈 계획
+
+### 릴리즈 정보
+- **버전**: `v1.1.0` (2년차 1분기 주요 기능 릴리즈)
+- **예정 릴리즈 날짜**: 2024-04-05
+- **호환성**:
+  - 최소 요구사항 유지 (Python 3.8+)
+  - 데이터베이스 스키마 업그레이드 (자동 마이그레이션)
+  - v1.0.x 설정 파일 완전 호환
+
+- **주요 기능 하이라이트**:
+  - 고급 파일 감지 및 자동 분류 시스템
+  - 다중 메타데이터 소스 통합
+  - 고급 검색 및 필터링 시스템
+  - 태그 시스템 및 시청 상태 추적
+  - UI/UX 개선 및 성능 최적화
+
+### 릴리즈 프로세스
+- **코드 프리징**: 2024-03-25
+  - 모든 기능 개발 완료
+  - 알려진 심각한 버그 수정 완료
+  - 성능 테스트 및 최적화 완료
+
+- **릴리즈 후보 생성**: 2024-03-27
+  - RC1 태그 생성 (`v1.1.0-rc1`)
+  - 내부 테스터 배포
+  - 릴리즈 노트 초안 작성
+
+- **테스트 기간**: 2024-03-27 ~ 2024-04-02
+  - 모든 자동화 테스트 스위트 실행
+  - 크로스 플랫폼 검증
+  - 성능 및 안정성 테스트
+  - 데이터 마이그레이션 테스트
+
+- **최종 준비**: 2024-04-03 ~ 2024-04-04
+  - 최종 버그 수정 및 안정화
+  - 릴리즈 노트 최종화
+  - 설치 패키지 생성 및 테스트
+  - 배포 채널 준비
+
+- **출시**: 2024-04-05
+  - GitHub 릴리즈 태그 생성
+  - PyPI 패키지 업데이트
+  - 설치 프로그램 및 바이너리 배포
+  - 사용자 공지 및 블로그 포스트
+
+### 배포 형태
+- **소스 배포**:
+  - GitHub 릴리즈: 소스 아카이브 (.zip, .tar.gz)
+  - PyPI 패키지: `pip install --upgrade anime-file-sorter`
+  - 요구사항 및 설치 지침 업데이트
+
+- **바이너리 배포**:
+  - Windows: 인스톨러 (.exe, MSI) - 자동 업데이트 지원
+  - macOS: 애플리케이션 번들 (.app) - 자동 업데이트 지원
+  - Linux: AppImage 및 .deb/.rpm 패키지
+
+- **문서 배포**:
+  - 온라인 문서 사이트 업데이트 (v1.1.0 섹션)
+  - 오프라인 문서 패키지 동봉
+  - 업그레이드 가이드 및 새 기능 안내서
+
+### 마이그레이션 및 업그레이드
+- **데이터베이스 마이그레이션**:
+  - 자동 스키마 업그레이드 지원
+  - 롤백 및 복구 메커니즘
+  - 마이그레이션 진행 상황 UI
+  - 데이터 백업 권장 알림
+
+- **설정 마이그레이션**:
+  - v1.0.x 설정 자동 변환
+  - 새로운 기능 기본값 적용
+  - 사용자 커스터마이징 보존
+  - 설정 호환성 검증
+
+- **플러그인 호환성**:
+  - 플러그인 API 호환성 보장
+  - 기존 플러그인 자동 검증
+  - 업데이트 필요 플러그인 알림
+  - 플러그인 개발자 가이드 업데이트
+
+### 출시 후 계획
+- **유지보수 계획**:
+  - 중요 버그 패치: 발견 후 3일 이내 릴리즈
+  - 정기 유지보수 릴리즈: 2주 주기 (v1.1.x)
+  - 성능 개선 및 최적화: 월간 업데이트
+
+- **피드백 수집 전략**:
+  - 사용자 피드백 포럼 및 이슈 트래커
+  - 인앱 피드백 시스템 강화
+  - 사용 통계 분석 (옵트인)
+  - 주간 피드백 요약 및 우선순위 조정
+
+- **2분기 계획 연계**:
+  - 피드백 기반 우선순위 재조정
+  - 추가 메타데이터 소스 구현 계획
+  - 성능 개선 로드맵 구체화
+  - 사용자 UI/UX 개선 계획 수립
+
+### 홍보 및 마케팅
+- **릴리즈 공지**:
+  - 공식 블로그 포스트 (새 기능 소개)
+  - 소셜 미디어 공지
+  - 애니메이션 커뮤니티 포럼 공지
+  - 개발자 뉴스레터
+
+- **문서 및 튜토리얼**:
+  - 주요 기능 비디오 튜토리얼 제작
+  - 기능 소개 블로그 시리즈
+  - 사용 사례 및 성공 사례 공유
+  - 단계별 가이드 인포그래픽 
