--- a/docs/annual_reports/year2/Q2.md
+++ b/docs/annual_reports/year2/Q2.md
@@ -62,3 +62,400 @@
 - 중간 마일스톤 1: 핵심 기능 구현 완료
 - 중간 마일스톤 2: 데이터베이스 통합 완료
 - 중간 마일스톤 3: 초기 사용자 테스트 완료 
+
+## 주차별 마일스톤
+
+- **주 1-2 (2024-04-08 ~ 2024-04-21)**: 파일 정리 기본 기능 고도화
+  - 2024-04-10: 다양한 파일 이름 패턴 인식 알고리즘 완성 (`src/anime_file_sorter/file_parser/advanced_pattern_detector.py`)
+  - 2024-04-14: 파일 및 폴더 정리 작업 구현 완료 (`src/anime_file_sorter/organizer/file_organizer.py`)
+  - 2024-04-18: 일괄 작업 관리 시스템 구현 (`src/anime_file_sorter/organizer/batch_processor.py`)
+  - 2024-04-20: 정리 결과 데이터베이스 스키마 및 모델 구현 (`src/anime_file_sorter/data/models/organization_results.py`)
+  - 책임자: 파일 정리 시스템 담당
+
+- **주 3-4 (2024-04-22 ~ 2024-05-05)**: UI/UX 개선 및 진행 상황 모니터링
+  - 2024-04-24: 작업 진행 상황 표시 컴포넌트 개선 (`src/anime_file_sorter/ui/progress_monitor.py`)
+  - 2024-04-28: 결과 보고서 및 요약 뷰 구현 (`src/anime_file_sorter/ui/report_view.py`)
+  - 2024-05-02: 오류 및 경고 메시지 시스템 개선 (`src/anime_file_sorter/ui/notification_system.py`)
+  - 2024-05-04: UI 반응성 최적화 완료 (`src/anime_file_sorter/ui/optimized_components.py`)
+  - 책임자: UI/UX 담당
+
+- **주 5-6 (2024-05-06 ~ 2024-05-19)**: 메타데이터 통합 시스템 완성
+  - 2024-05-08: 메타데이터 통합 알고리즘 최종 구현 (`src/anime_file_sorter/metadata/integration_engine.py`)
+  - 2024-05-12: 충돌 해결 전략 및 사용자 설정 구현 (`src/anime_file_sorter/metadata/conflict_manager.py`)
+  - 2024-05-16: 우선순위 기반 메타데이터 선택 시스템 완성 (`src/anime_file_sorter/metadata/priority_selector.py`)
+  - 2024-05-18: 메타데이터 소스 추적 기능 구현 (`src/anime_file_sorter/metadata/source_tracker.py`)
+  - 책임자: 메타데이터 시스템 담당
+
+- **주 7-8 (2024-05-20 ~ 2024-06-02)**: 설정 및 환경설정 시스템 고도화
+  - 2024-05-22: 통합 설정 관리 시스템 구현 (`src/anime_file_sorter/settings/settings_manager.py`)
+  - 2024-05-26: 설정 프로필 저장 및 로드 기능 구현 (`src/anime_file_sorter/settings/profile_system.py`)
+  - 2024-05-30: 고급 설정 옵션 확장 완료 (`src/anime_file_sorter/settings/advanced_options.py`)
+  - 2024-06-01: 설정 데이터베이스 스키마 최적화 (`src/anime_file_sorter/data/models/settings.py`)
+  - 책임자: 설정 시스템 담당
+
+- **주 9-10 (2024-06-03 ~ 2024-06-16)**: 내부 테스트 및 품질 안정화
+  - 2024-06-05: 통합 테스트 수행 및 버그 수정 (`tests/integration/complete_system_test.py`)
+  - 2024-06-09: 성능 최적화 및 병목 현상 해결 (`tests/performance/`)
+  - 2024-06-13: 대용량 데이터 처리 안정성 테스트 (`tests/stress/large_library_test.py`)
+  - 2024-06-15: 전체 시스템 안정화 작업 완료 (코드 리뷰 및 리팩토링)
+  - 책임자: QA 및 테스트 담당
+
+- **주 11-12 (2024-06-17 ~ 2024-06-30)**: 사용자 테스트 및 피드백 수집/분석
+  - 2024-06-19: 사용자 테스트 계획 수립 및 테스트 그룹 모집 완료 (`docs/testing/user_test_plan_q2.md`)
+  - 2024-06-23: 내부 사용자 테스트 실시 및 피드백 수집 (`docs/testing/internal_feedback_q2.md`)
+  - 2024-06-27: 피드백 분석 및 우선순위 지정 완료 (`docs/planning/feedback_analysis_q2.md`)
+  - 2024-06-30: 2년차 후반 개발 계획 조정 및 2분기 회고 (`docs/meetings/year2_q2_retrospective.md`)
+  - 책임자: 프로젝트 관리 & 사용자 테스트 담당
+
+## 산출물 세부 명세
+
+- `src/anime_file_sorter/organizer/`:
+  - `file_organizer.py`: 파일 및 폴더 정리 핵심 모듈
+  - `batch_processor.py`: 일괄 작업 관리 시스템
+  - `job_tracker.py`: 작업 진행 상황 추적 시스템
+  - `undo_manager.py`: 작업 취소 및 롤백 관리
+  - `naming_engine.py`: 파일명 변환 규칙 엔진
+
+- `src/anime_file_sorter/ui/`:
+  - `progress_monitor.py`: 향상된 작업 진행 상황 모니터
+  - `report_view.py`: 작업 결과 보고서 및 요약 뷰
+  - `notification_system.py`: 개선된 알림 및 경고 시스템
+  - `optimized_components.py`: 성능 최적화된 UI 컴포넌트
+  - `settings_editor.py`: 고급 설정 편집 인터페이스
+
+- `src/anime_file_sorter/metadata/`:
+  - `integration_engine.py`: 메타데이터 통합 핵심 엔진
+  - `conflict_manager.py`: 메타데이터 충돌 해결 시스템
+  - `priority_selector.py`: 우선순위 기반 메타데이터 선택기
+  - `source_tracker.py`: 메타데이터 소스 추적 시스템
+  - `field_mapper.py`: 다양한 소스 간 필드 매핑 엔진
+
+- `src/anime_file_sorter/settings/`:
+  - `settings_manager.py`: 통합 설정 관리 시스템
+  - `profile_system.py`: 설정 프로필 관리
+  - `advanced_options.py`: 고급 설정 옵션 모듈
+  - `import_export.py`: 설정 가져오기/내보내기 기능
+  - `defaults_manager.py`: 기본값 및 기본 설정 관리
+
+- `src/anime_file_sorter/data/models/`:
+  - `organization_results.py`: 파일 정리 결과 데이터 모델
+  - `job_history.py`: 작업 이력 데이터 모델
+  - `settings.py`: 설정 데이터 모델
+  - `metadata_storage.py`: 통합 메타데이터 저장 모델
+  - `user_profiles.py`: 사용자 프로필 및 환경설정 모델
+
+- `tests/integration/`:
+  - `organizer_tests.py`: 파일 정리 통합 테스트
+  - `ui_integration_tests.py`: UI 컴포넌트 통합 테스트
+  - `metadata_integration_tests.py`: 메타데이터 통합 테스트
+  - `settings_system_tests.py`: 설정 시스템 통합 테스트
+  - `complete_system_test.py`: 전체 시스템 통합 테스트
+
+- `docs/user_guide/`:
+  - `file_organizer.md`: 파일 정리 시스템 사용자 가이드
+  - `metadata_management.md`: 메타데이터 관리 가이드
+  - `settings_profiles.md`: 설정 프로필 활용 가이드
+  - `batch_processing.md`: 일괄 작업 처리 가이드
+  - `troubleshooting.md`: 문제 해결 및 오류 대응 가이드
+
+## 테스트 계획
+
+### 단위 테스트
+- **파일 정리 시스템 테스트** (`tests/unit/organizer/`):
+  - 다양한 파일 패턴 인식 정확도 테스트
+  - 파일명 변환 규칙 적용 테스트
+  - 경로 충돌 및 해결 테스트
+  - 일괄 작업 처리 로직 테스트
+  - 작업 취소 및 롤백 기능 테스트
+
+- **UI 컴포넌트 테스트** (`tests/unit/ui/`):
+  - 진행 상황 모니터 정확도 테스트
+  - 작업 보고서 생성 및 표시 테스트
+  - 알림 시스템 기능 테스트
+  - UI 컴포넌트 반응성 테스트
+  - 설정 편집기 입력 검증 테스트
+
+- **메타데이터 통합 테스트** (`tests/unit/metadata/`):
+  - 다양한 소스 통합 시나리오 테스트
+  - 충돌 해결 알고리즘 테스트
+  - 우선순위 시스템 정확도 테스트
+  - 소스 추적 기능 테스트
+  - 필드 매핑 정확도 테스트
+
+- **설정 시스템 테스트** (`tests/unit/settings/`):
+  - 설정 저장 및 로드 테스트
+  - 프로필 관리 기능 테스트
+  - 설정 가져오기/내보내기 테스트
+  - 기본값 복원 기능 테스트
+  - 설정 검증 로직 테스트
+
+### 통합 테스트
+- **파일 정리-메타데이터 통합 테스트** (`tests/integration/organizer_metadata/`):
+  - 메타데이터 기반 파일 정리 테스트
+  - 정리 작업 후 메타데이터 업데이트 테스트
+  - 작업 이력과 메타데이터 연계 테스트
+  - 오류 상황 메타데이터 처리 테스트
+
+- **UI-백엔드 통합 테스트** (`tests/integration/ui_backend/`):
+  - 진행 상황 실시간 업데이트 테스트
+  - 작업 제어 및 취소 인터페이스 테스트
+  - 설정 변경의 실시간 반영 테스트
+  - 오류 상황 UI 피드백 테스트
+
+- **설정-시스템 통합 테스트** (`tests/integration/settings_system/`):
+  - 설정 변경의 시스템 동작 영향 테스트
+  - 프로필 전환 시 전체 시스템 적용 테스트
+  - 가져오기/내보내기 기능 테스트
+  - 설정 충돌 해결 테스트
+
+- **데이터베이스 통합 테스트** (`tests/integration/database/`):
+  - 작업 이력 데이터베이스 저장 및 불러오기 테스트
+  - 설정 데이터베이스 연동 테스트
+  - 메타데이터 캐시 및 영구 저장 테스트
+  - 데이터베이스 마이그레이션 및 업그레이드 테스트
+
+### 성능 테스트
+- **파일 정리 성능 테스트** (`tests/performance/organizer/`):
+  - 대용량 라이브러리 정리 성능 (목표: 10,000 파일 ≤ 15분)
+  - 메모리 사용량 효율성 (목표: 최대 메모리 사용 ≤ 500MB)
+  - CPU 사용 효율성 (목표: CPU 사용률 ≤ 70%)
+  - 일괄 작업 처리 속도 (목표: 100 파일/분)
+
+- **UI 응답성 테스트** (`tests/performance/ui/`):
+  - 일괄 작업 중 UI 응답성 (목표: 사용자 입력 지연 ≤ 100ms)
+  - 대규모 보고서 표시 성능 (목표: 1,000개 항목 ≤ 1초)
+  - 설정 변경 반영 속도 (목표: 즉시 적용 ≤ 200ms)
+  - 모니터링 UI 업데이트 오버헤드 (목표: CPU 오버헤드 ≤ 5%)
+
+- **메타데이터 처리 성능 테스트** (`tests/performance/metadata/`):
+  - 다중 소스 통합 처리 시간 (목표: 복잡한 항목 ≤ 500ms)
+  - 메타데이터 일괄 업데이트 성능 (목표: 1,000 항목 ≤ 30초)
+  - 메모리 사용 효율성 (목표: 대형 메타데이터 ≤ 50MB)
+  - 캐시 성능 (목표: 캐시 적중률 ≥ 90%)
+
+- **데이터베이스 성능 테스트** (`tests/performance/database/`):
+  - 쿼리 실행 성능 (목표: 복잡한 쿼리 ≤ 200ms)
+  - 트랜잭션 처리 성능 (목표: 일괄 저장 500 항목 ≤ 5초)
+  - 동시 접근 성능 (목표: 10개 동시 쿼리 ≤ 1초)
+  - 데이터베이스 크기 효율성 (목표: 10,000 항목 ≤ 50MB)
+
+### 스트레스 테스트
+- **대용량 처리 테스트** (`tests/stress/large_library/`):
+  - 100,000 파일 라이브러리 처리 테스트
+  - 장시간 연속 실행 테스트 (24시간)
+  - 메모리 누수 탐지 테스트
+  - 자원 고갈 복구 테스트
+
+- **오류 복구 테스트** (`tests/stress/error_recovery/`):
+  - 작업 중단 및 재개 시나리오 테스트
+  - 네트워크 연결 손실 및 복구 테스트
+  - 데이터베이스 연결 실패 및 재연결 테스트
+  - 오류 발생 후 안정성 테스트
+
+### 사용성 테스트
+- **내부 사용자 테스트**:
+  - 개발팀 및 내부 테스터 20명 구성
+  - 핵심 작업 흐름 완료 성공률 측정 (목표: ≥ 95%)
+  - 테스트 작업 완료 시간 측정 (목표: 이전 대비 30% 단축)
+  - System Usability Scale (SUS) 평가 (목표: ≥ 85/100)
+  - 정성적 피드백 수집 및 분석
+
+- **테스트 시나리오**:
+  - 다양한 애니메이션 라이브러리 정리 작업
+  - 복잡한 메타데이터 충돌 해결
+  - 사용자 정의 설정 프로필 생성 및 적용
+  - 대용량 일괄 작업 모니터링 및 제어
+  - 기존 라이브러리 변환 및 마이그레이션
+
+## 문서화 전략
+
+### 코드 문서화
+- **API 문서 업데이트**:
+  - 새로운 파일 정리 API 완전 문서화
+  - 메타데이터 통합 API 업데이트
+  - 설정 시스템 API 확장 문서
+  - 데이터 모델 및 스키마 문서화
+
+- **인라인 코드 주석 개선**:
+  - 복잡한 파일 정리 알고리즘 단계별 주석
+  - 메타데이터 충돌 해결 로직 상세 주석
+  - 성능 최적화 부분 명시적 표시
+  - 예외 처리 및 오류 복구 로직 설명
+
+- **개발자 가이드 확장**:
+  - 파일 정리 시스템 아키텍처 문서 (`docs/architecture/file_organizer.md`)
+  - 통합 설정 시스템 설계 문서 (`docs/architecture/settings_system.md`)
+  - 메타데이터 통합 아키텍처 업데이트 (`docs/architecture/metadata_integration_v2.md`)
+  - 완성된 데이터베이스 스키마 문서 (`docs/architecture/database_schema_v2.md`)
+
+### 사용자 문서
+- **핵심 기능 가이드**:
+  - 파일 정리 시스템 완전 가이드 (`docs/user/file_organizer.md`)
+  - 고급 메타데이터 관리 가이드 (`docs/user/advanced_metadata.md`)
+  - 설정 프로필 활용 가이드 (`docs/user/settings_profiles.md`)
+  - 일괄 작업 처리 가이드 (`docs/user/batch_processing.md`)
+
+- **튜토리얼 시리즈 확장**:
+  - 대규모 라이브러리 정리 튜토리얼 (`docs/user/tutorials/large_library.md`)
+  - 커스텀 메타데이터 관리 튜토리얼 (`docs/user/tutorials/custom_metadata.md`)
+  - 여러 설정 프로필 활용 튜토리얼 (`docs/user/tutorials/multiple_profiles.md`)
+  - 문제 해결 및 오류 대응 튜토리얼 (`docs/user/tutorials/troubleshooting.md`)
+
+- **참조 문서**:
+  - 설정 옵션 완전 참조 업데이트 (`docs/user/references/settings_reference.md`)
+  - 파일 정리 규칙 구문 참조 (`docs/user/references/organizing_rules.md`)
+  - 메타데이터 충돌 해결 옵션 참조 (`docs/user/references/conflict_resolution.md`)
+  - 오류 메시지 및 해결책 참조 (`docs/user/references/error_messages.md`)
+
+- **시각 자료 개선**:
+  - 파일 정리 워크플로우 다이어그램 (`docs/user/images/organizer_workflow.png`)
+  - 설정 프로필 관리 스크린샷 (`docs/user/images/profile_management.png`)
+  - 메타데이터 충돌 해결 인터페이스 스크린샷 (`docs/user/images/conflict_resolution.png`)
+  - 작업 모니터링 UI 스크린샷 (`docs/user/images/job_monitoring.png`)
+
+## 릴리즈 계획
+
+### 릴리즈 정보
+- **버전**: `v1.2.0` (2년차 2분기 주요 기능 릴리즈)
+- **예정 릴리즈 날짜**: 2024-07-05
+- **호환성**:
+  - v1.1.x와 완전히 호환
+  - 데이터베이스 스키마 업그레이드 (자동 마이그레이션)
+  - 설정 파일 호환성 유지
+
+- **주요 기능 하이라이트**:
+  - 완성된 파일 정리 시스템
+  - 고도화된 메타데이터 통합 엔진
+  - 설정 프로필 관리 시스템
+  - 향상된 성능 및 안정성
+  - 개선된 사용자 인터페이스
+
+### 릴리즈 프로세스
+- **코드 프리징**: 2024-06-24
+  - 모든 기능 개발 완료
+  - 알려진 버그 수정 완료
+  - 성능 최적화 완료
+
+- **릴리즈 후보 생성**: 2024-06-26
+  - RC1 태그 생성 (`v1.2.0-rc1`)
+  - 내부 테스터 배포
+  - 릴리즈 노트 초안 작성
+
+- **테스트 기간**: 2024-06-26 ~ 2024-07-02
+  - 전체 테스트 스위트 실행
+  - 수동 테스트 시나리오 실행
+  - 크로스 플랫폼 검증
+  - 데이터 마이그레이션 테스트
+
+- **최종 준비**: 2024-07-03 ~ 2024-07-04
+  - 최종 버그 수정 및 안정화
+  - 릴리즈 노트 최종화
+  - 설치 패키지 생성 및 서명
+  - 배포 채널 준비
+
+- **출시**: 2024-07-05
+  - GitHub 릴리즈 태그 생성
+  - PyPI 패키지 업데이트
+  - 설치 프로그램 및 바이너리 배포
+  - 공식 발표 및 공지
+
+### 마이그레이션 및 업그레이드
+- **데이터베이스 마이그레이션**:
+  - v1.1.x 데이터베이스 자동 마이그레이션
+  - 마이그레이션 진행 상태 가시화
+  - 롤백 지원 및 백업 자동화
+  - 오류 복구 메커니즘
+
+- **설정 마이그레이션**:
+  - 기존 설정 자동 변환
+  - 새로운 설정 옵션 기본값 추가
+  - 설정 충돌 감지 및 해결
+  - 설정 검증 및 오류 보고
+
+- **라이브러리 데이터 마이그레이션**:
+  - 기존 메타데이터 새 형식으로 변환
+  - 작업 이력 마이그레이션
+  - 사용자 태그 및 분류 보존
+  - 마이그레이션 상태 보고서
+
+### 품질 보증
+- **릴리즈 승인 기준**:
+  - 100% 테스트 통과율
+  - 모든 지원 플랫폼에서 검증
+  - 성능 목표 95% 이상 달성
+  - 알려진 심각한 버그 0개
+
+- **검증 테스트**:
+  - 데이터 무결성 검증 테스트
+  - 마이그레이션 안정성 테스트
+  - 대용량 라이브러리 처리 테스트
+  - 오류 복구 및 롤백 테스트
+
+- **사용자 피드백 반영**:
+  - 내부 테스트 피드백 분석 및 반영
+  - 가장 빈번한 사용성 이슈 해결
+  - 우선순위가 높은 기능 요청 구현
+  - 문서 및 도움말 개선
+
+### 출시 후 계획
+- **유지보수 계획**:
+  - 중요 버그 패치: 발견 후 3일 이내
+  - 정기 유지보수 릴리즈: 2주 주기 (v1.2.x)
+  - 호환성 업데이트: 필요시
+
+- **피드백 수집**:
+  - 정식 사용자 피드백 채널 활성화
+  - 인앱 피드백 시스템 확장
+  - 사용 통계 분석 (옵트인)
+  - 주간 피드백 요약 보고서
+
+- **3분기 계획 연계**:
+  - 피드백 기반 3분기 우선순위 조정
+  - 주요 개선 요청 일정 계획
+  - 장기 로드맵 업데이트
+  - 개발자 문서 확장 계획
+
+### 홍보 및 사용자 지원
+- **릴리즈 홍보**:
+  - 기능 소개 블로그 포스트
+  - 소셜 미디어 공지
+  - 애니메이션 커뮤니티 포럼 공지
+  - 메일링 리스트 공지
+
+- **사용자 지원 강화**:
+  - 신규 기능 비디오 튜토리얼
+  - 업데이트된 FAQ 및 문제 해결 가이드
+  - 실시간 지원 채널 확대
+  - 자주 발생하는 질문에 대한 답변 준비
+
+## 2분기 성공 지표 (KPI)
+
+### 기능 완성도
+- **파일 정리 기능 완성률**: 100%
+- **메타데이터 통합 시스템 완성률**: 100%
+- **설정 관리 시스템 완성률**: 100%
+- **기존 계획 대비 구현률**: ≥ 95%
+
+### 성능 지표
+- **파일 정리 속도**: ≥ 100 파일/분
+- **UI 응답성**: 사용자 입력 지연 ≤ 100ms
+- **메모리 효율성**: 일반 사용 ≤ 300MB, 피크 사용 ≤ 600MB
+- **데이터베이스 성능**: 복잡한 쿼리 ≤ 200ms
+
+### 안정성 지표
+- **충돌 및 크래시 발생률**: ≤ 0.1%
+- **데이터 무결성 유지율**: 100%
+- **오류 복구 성공률**: ≥ 99%
+- **장시간(24시간) 실행 안정성**: 100%
+
+### 사용자 경험 지표
+- **작업 완료 소요 시간**: 이전 버전 대비 ≥ 30% 감소
+- **사용자 만족도 점수**: SUS ≥ 85/100
+- **작업 성공률**: ≥ 95%
+- **학습 곡선 단축**: 초기 사용 이해 시간 ≤ 15분
+
+### 코드 품질 지표
+- **테스트 커버리지**: ≥ 90% 
+- **정적 분석 통과율**: 100%
+- **문서화 완성도**: 모든 공개 API 100%
+- **리팩토링 완료율**: 계획된 리팩토링의 100% 
