--- a/docs/annual_reports/year3/Q1.md
+++ b/docs/annual_reports/year3/Q1.md
@@ -47,12 +47,222 @@
 - [ ] 사용자 피드백 기반 버그 수정
 - [ ] 사용성 테스트 및 개선
 
-## 예상 결과물
-- 시청 기록 통계 및 분석 시스템 (**데이터베이스 기반 통계/분석 엔진 포함**)
-- 통계 시각화 대시보드 (**데이터베이스 데이터 활용**)
-- 즐겨찾기 및 시리즈 관리 시스템 (**데이터베이스 기반 구현**)
-- 알림 및 일정 관리 기능 (**데이터베이스 연동**)
-- 성능 및 안정성 개선된 릴리스 (**데이터베이스 최적화 결과 반영**)
+## 주차별 마일스톤
+
+- **주 1-2**: 시청 통계 데이터 모델 구현 및 기본 지표 계산 엔진 개발
+  - 시청 기록 데이터베이스 스키마 확장 완료
+  - 기본 통계 쿼리 최적화 및 테스트 완료
+  - 통계 계산 캐싱 레이어 구현
+
+- **주 3-4**: 시청 패턴 시각화 라이브러리 통합 및 기본 차트 구현
+  - 차트 라이브러리 통합 완료
+  - 타임라인 및 파이/바 차트 구현
+  - 데이터베이스-시각화 연동 테스트 완료
+
+- **주 5-6**: 즐겨찾기 시스템 및 시리즈 관리 기능 구현
+  - 즐겨찾기 데이터 모델 구현 완료
+  - 사용자 정의 카테고리 및 분류 지원 완료
+  - 평점 및 리뷰 기능 구현 완료
+
+- **주 7-8**: 사용자 정의 보고서 및 고급 분석 도구 개발
+  - 사용자 정의 보고서 생성 UI 완성
+  - 데이터베이스 쿼리 빌더 구현
+  - 보고서 내보내기 및 공유 기능 구현
+
+- **주 9-10**: 알림 시스템 구현 및 외부 서비스 연동
+  - 기본 알림 시스템 구현 완료
+  - Windows 알림 센터 통합 완료
+  - 외부 캘린더 연동 구현 완료
+
+- **주 11-12**: 성능 최적화 및 최종 테스트
+  - 데이터베이스 쿼리 성능 최적화 완료
+  - 메모리 사용량 및 UI 응답성 최적화
+  - 사용자 테스트 피드백 반영 및 버그 수정 완료
+
+## 산출물 명세
+
+- `src/anime_file_sorter/statistics/`:
+  - `models.py`: 통계 데이터 모델 및 관계 정의
+  - `engine.py`: 통계 계산 엔진 및 집계 모듈
+  - `queries.py`: 최적화된 데이터베이스 쿼리 모음
+  - `cache.py`: 통계 결과 캐싱 시스템
+
+- `src/anime_file_sorter/visualization/`:
+  - `chart_engine.py`: 차트 및 그래프 렌더링 엔진
+  - `timeline.py`: 시청 기록 타임라인 컴포넌트
+  - `heatmap.py`: 시청 활동 히트맵 컴포넌트
+  - `pie_charts.py`: 장르/태그 선호도 차트
+  - `report_builder.py`: 사용자 정의 보고서 생성기
+
+- `src/anime_file_sorter/favorites/`:
+  - `models.py`: 즐겨찾기 데이터 모델
+  - `manager.py`: 즐겨찾기 관리 시스템
+  - `categories.py`: 사용자 정의 카테고리 관리
+  - `rating.py`: 평점 및 리뷰 시스템
+  - `recommendations.py`: 기본 추천 알고리즘
+
+- `src/anime_file_sorter/notifications/`:
+  - `system.py`: 알림 시스템 기본 구조
+  - `scheduler.py`: 알림 스케줄링 엔진
+  - `providers/`: 알림 제공자 모듈 (Windows, 이메일 등)
+  - `calendar_export.py`: 외부 캘린더 연동 모듈
+
+- `src/anime_file_sorter/data/migrations/`:
+  - `00X_statistics_schema.py`: 통계 스키마 마이그레이션
+  - `00Y_favorites_schema.py`: 즐겨찾기 스키마 마이그레이션
+  - `00Z_notifications_schema.py`: 알림 스키마 마이그레이션
+
+- `src/anime_file_sorter/ui/statistics/`:
+  - `dashboard.py`: 통계 대시보드 메인 UI
+  - `chart_widgets.py`: 차트 위젯 컬렉션
+  - `report_dialog.py`: 보고서 생성 및 내보내기 대화상자
+
+- `src/anime_file_sorter/ui/favorites/`:
+  - `browser.py`: 즐겨찾기 브라우저 UI
+  - `category_editor.py`: 카테고리 편집기
+  - `rating_dialog.py`: 평점 및 리뷰 입력 대화상자
+
+- `docs/user_guide/`:
+  - `statistics.md`: 통계 기능 사용자 가이드
+  - `favorites.md`: 즐겨찾기 시스템 사용 가이드
+  - `notifications.md`: 알림 시스템 설정 가이드
+
+- `docs/developer/`:
+  - `statistics_system.md`: 통계 시스템 설계 문서
+  - `visualization_api.md`: 시각화 API 문서
+  - `favorites_schema.md`: 즐겨찾기 스키마 문서
+
+## 성공 기준 (KPI)
+
+- **통계 시스템 성능**:
+  - 기본 통계 계산 시간: ≤ 500ms (10,000개 이상의 시청 기록)
+  - 복잡한 집계 쿼리 실행 시간: ≤ 2초 (장르/시간대별 통계)
+  - 데이터베이스 최적화 후 쿼리 속도 향상: ≥ 30%
+  - 캐싱 적용 시 응답 시간: ≤ 50ms
+
+- **시각화 품질 및 성능**:
+  - 차트 렌더링 시간: ≤ 300ms (1,000개 이상의 데이터 포인트)
+  - 차트 상호작용 응답 시간: ≤ 100ms
+  - 시각화 메모리 사용량: ≤ 50MB (복잡한 대시보드)
+  - 사용자 만족도: ≥ 4.0/5.0 (내부 테스트)
+
+- **즐겨찾기 시스템 완성도**:
+  - 사용자 정의 카테고리 지원: ≥ 20개 카테고리
+  - 즐겨찾기 데이터 CRUD 작업 속도: ≤ 100ms
+  - 대량 즐겨찾기 처리 (1,000개) 성능: ≤ 3초
+  - 즐겨찾기 관련 UI 응답성: ≤ 50ms
+
+- **알림 시스템 신뢰성**:
+  - 알림 전달 정확도: ≥ 99%
+  - 알림 처리 지연 시간: ≤ 1초
+  - 외부 서비스 연동 성공률: ≥ 95%
+  - 사용자 정의 알림 설정 용이성: ≥ 4.0/5.0 (사용자 평가)
+
+- **전체 시스템 안정성**:
+  - 메모리 누수 없음: 24시간 연속 실행 후 메모리 증가 ≤ 10%
+  - 충돌 발생률: ≤ 0.1% (사용자 세션 기준)
+  - 성능 저하 없음: 대규모 라이브러리(10,000+ 항목) 처리 시
+  - 테스트 커버리지: ≥ 85% (새로운 기능)
+
+## 테스트 계획
+
+### 단위 테스트
+- **통계 엔진 테스트**:
+  - 모든 통계 계산 알고리즘 검증
+  - 다양한 데이터셋 크기에 대한 정확성 테스트
+  - 에지 케이스 및 극단적 사용 시나리오 테스트
+  - 데이터베이스 쿼리 결과 검증
+
+- **차트 렌더링 테스트**:
+  - 모든 차트 유형 렌더링 검증
+  - 다양한 데이터 범위 및 크기 테스트
+  - 렌더링 정확도 및 스타일 일관성 검증
+  - 차트 상호작용 기능 테스트
+
+- **데이터 모델 테스트**:
+  - 즐겨찾기 및 통계 모델 CRUD 작업 검증
+  - 관계 및 제약 조건 검증
+  - 스키마 마이그레이션 테스트
+  - 데이터 일관성 및 무결성 검증
+
+### 통합 테스트
+- **통계-시각화 통합 테스트**:
+  - 통계 엔진과 차트 시스템 간 데이터 흐름 검증
+  - 대시보드에서의 실시간 업데이트 테스트
+  - 사용자 상호작용에 따른 시각화 변경 테스트
+
+- **알림-일정 통합 테스트**:
+  - 다양한 알림 트리거 시나리오 테스트
+  - 알림-캘린더 연동 검증
+  - 외부 시스템과의 통합 테스트
+
+- **데이터베이스 통합 테스트**:
+  - 복잡한 다중 테이블 쿼리 검증
+  - 트랜잭션 및 롤백 테스트
+  - 동시 접근 및 경쟁 조건 테스트
+
+### 성능 테스트
+- **대규모 데이터셋 테스트**:
+  - 10,000+ 시청 기록 처리 성능 측정
+  - 1,000+ 즐겨찾기 항목 관리 성능 측정
+  - 데이터베이스 쿼리 실행 계획 및 성능 분석
+
+- **메모리 사용량 테스트**:
+  - 장시간 실행 시 메모리 프로파일링
+  - 대규모 차트 렌더링 메모리 사용량 측정
+  - 메모리 누수 탐지 및 해결
+
+- **응답성 테스트**:
+  - UI 상호작용 지연 시간 측정
+  - 백그라운드 작업 처리 중 UI 응답성 검증
+  - 복잡한 대시보드 렌더링 성능 측정
+
+### 사용자 테스트
+- **내부 베타 테스트**:
+  - 주요 기능별 사용 시나리오 테스트
+  - 직관성 및 사용 용이성 평가
+  - 버그 및 불편사항 보고
+
+## 문서화 전략
+
+- **사용자 문서**:
+  - 통계 대시보드 사용 가이드
+  - 즐겨찾기 관리 및 카테고리 생성 튜토리얼
+  - 사용자 정의 보고서 생성 가이드
+  - 알림 설정 및 관리 방법 안내
+  - 시청 패턴 분석 팁 및 활용 방법
+
+- **개발자 문서**:
+  - 통계 엔진 아키텍처 및 설계 원칙
+  - 시각화 시스템 API 및 확장 가이드
+  - 데이터베이스 스키마 및 관계 다이어그램
+  - 알림 시스템 구조 및 확장 방법
+  - 성능 최적화 지침 및 모범 사례
+
+- **인라인 코드 문서**:
+  - 모든 공개 API 및 클래스에 자세한 주석
+  - 복잡한 알고리즘 및 쿼리에 설명 추가
+  - 예상 성능 특성 및 제약 사항 명시
+  - 사용 예제 및 샘플 코드 포함
+
+## 사용자 피드백 계획
+
+- **베타 테스터 그룹 운영**:
+  - 20명 이상의 다양한 사용 패턴을 가진 테스터 모집
+  - 주간 피드백 세션 및 정기 설문조사 실시
+  - 다양한 애니메이션 라이브러리 크기 및 사용 환경 테스트
+
+- **피드백 수집 방법**:
+  - 인앱 피드백 시스템 구현 (스크린샷 첨부 가능)
+  - 특정 기능에 대한 표적 설문조사
+  - 사용성 세션 (화면 녹화 및 사용자 관찰)
+  - 버그 및 기능 요청 추적 시스템
+
+- **피드백 우선순위 및 적용**:
+  - 심각도 및 영향도 기반 이슈 분류
+  - 빠른 수정 가능 항목 즉시 반영
+  - 주요 피드백 기반 스프린트 계획 조정
+  - 피드백 반영 결과 테스터에게 공유
 
 ## 위험 요소 및 대응 계획
 - **위험**: 대량의 통계 데이터 처리 성능 이슈
@@ -64,7 +274,43 @@
 - **위험**: 시청 기록 및 즐겨찾기 데이터베이스 스키마 변경 시 마이그레이션 문제
   - **대응**: 스키마 변경 관리 도구 및 절차 수립, 마이그레이션 스크립트 개발 및 테스트
   - **검증 방법**: 다양한 스키마 변경 시나리오에 대한 마이그레이션 테스트 자동화
+- **위험**: 메모리 사용량 증가 및 성능 저하
+  - **대응**: 메모리 할당 최적화, 리소스 사용량 모니터링, 데이터 페이징 처리
+  - **검증 방법**: 대규모 데이터셋에서 메모리 프로파일링, 성능 벤치마크
+- **위험**: 외부 서비스 (MAL/AniList) API 변경 또는 제한
+  - **대응**: 래퍼 레이어 구현, 요청 제한 관리, 대체 데이터 소스 준비
+  - **검증 방법**: API 응답 모니터링, 장애 시나리오 테스트
 
-## 마일스톤
-- **주 X**: [마일스톤 이름] - [완료 기준 명시]
-- **주 Y**: [마일스톤 이름] - [완료 기준 명시] 
+## 3년차 1분기 릴리즈 계획
+
+- **버전**: `v3.1.0` (주요 기능 업데이트)
+- **패키징 방식**: 
+  - GitHub 릴리즈 페이지 배포
+  - Windows 설치 프로그램 (.exe)
+  - macOS 애플리케이션 번들 (.app)
+  - pip 설치 패키지
+
+- **주요 릴리즈 포인트**:
+  - 완전한 통계 및 분석 대시보드
+  - 사용자 정의 보고서 생성 기능
+  - 즐겨찾기 및 시리즈 관리 시스템
+  - 알림 및 일정 관리 기능
+  - 성능 및 안정성 개선
+
+- **배포 전 검증**:
+  - 모든 단위 및 통합 테스트 통과
+  - 성능 벤치마크 목표 달성
+  - 베타 테스터 피드백 반영
+  - 데이터베이스 마이그레이션 테스트
+
+- **배포 후 모니터링**:
+  - 인앱 오류 보고 시스템을 통한 문제 추적
+  - 사용자 행동 분석 (가장 많이 사용하는 기능)
+  - 성능 지표 모니터링
+  - 베타 테스터 지속 피드백 수집
+
+- **문서 및 지원**:
+  - 상세한 릴리즈 노트 작성
+  - 새 기능 사용자 가이드 업데이트
+  - 자주 묻는 질문 및 문제 해결 가이드
+  - 비디오 튜토리얼 제작 
